[project]
name = "blind-75-python"
version = "0.1.0"
description = "Documented Python solutions and learning notes for the Blind 75."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-q --import-mode=importlib"
norecursedirs = ["templates"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
